--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mutter (3.34.3-1ubuntu1~19.10.1pop1) eoan; urgency=medium
+
+  * New upstream release
+
+ -- Michael Aaron Murphy <michael@system76.com>  Mon, 03 Feb 2020 10:29:35 -0700
+
 mutter (3.34.3-1ubuntu1~19.10.1) eoan; urgency=medium
 
   * Backport to eoan (LP: #1858683)
